[project]
name = "papers-reading-sharing-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin",
    "numpy>=2.2.6",
    "python-markdown-math>=0.9",
]

[tool.uv.sources]
mkdocs-awesome-pages-plugin = { git = "https://github.com/Owen-Liuyuxuan/mkdocs-awesome-pages-plugin.git" }